# frappe_wealthreader

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
quickbanks/: hooks.py  modules.txt
quickbanks/config/: desktop.py
quickbanks/public/js/: quickbanks.bundle.js  quickbanks_link.js  quickbanks_widget.js
quickbanks/quickbanks/doctype/quickbanks_connection/: quickbanks_connection.json  quickbanks_connection.py  quickbanks_connection_list.js  test_quickbanks_connection.py
quickbanks/quickbanks/doctype/quickbanks_link_session/: quickbanks_link_session.json  quickbanks_link_session.py
quickbanks/quickbanks/doctype/quickbanks_settings/: quickbanks_connector.py  quickbanks_settings.js  quickbanks_settings.json  quickbanks_settings.py  test_quickbanks_settings.py
quickbanks/quickbanks/page/connect_bank_account/: connect_bank_account.js  connect_bank_account.json
quickbanks/quickbanks/workspace/bank_sync/: bank_sync.json
quickbanks/setup/: install.py
wealthreader/: hooks.py  modules.txt
wealthreader/config/: desktop.py
wealthreader/public/js/: wealthreader_link.js
wealthreader/setup/: install.py
wealthreader/wealthreader/doctype/wealthreader_connection/: test_wealthreader_connection.py  wealthreader_connection.json  wealthreader_connection.py  wealthreader_connection_list.js
wealthreader/wealthreader/doctype/wealthreader_link_session/: wealthreader_link_session.json  wealthreader_link_session.py
wealthreader/wealthreader/doctype/wealthreader_settings/: test_wealthreader_settings.py  wealthreader_connector.py  wealthreader_settings.js  wealthreader_settings.json  wealthreader_settings.py
wealthreader/wealthreader/workspace/wealthreader/: wealthreader.json
