[project]
name = "quickbanks"
authors = [
    { name = "ADMBit Technologies", email = "info@admbit.com" }
]
description = "QuickBanks bank feed integration for ERPNext via Wealthreader"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests~=2.31.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "quickbanks"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"

[tool.frappe.testing.function_type_validation]
# disabled for now, enable when all functions are typed
disabled = true
